Commit Controller